# omnect-cli

./: .gitignore  CHANGELOG.md  Cargo.audit.ignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build-image.sh  project-context.md  tree
backend/: .gitignore  Dockerfile
backend/sh/: copy_file_from_image.sh  copy_file_to_image.sh  create_dir.sh  entrypoint.sh  functions  set_enrollment_config.sh  set_identity_config.sh  set_iot_leaf_config.sh  set_iotedge_gw_config.sh  set_iotedge_leaf_sas_config.sh  set_ssh_tunnel_cert.sh  set_wifi_config.sh
ci/: .gitignore  Dockerfile.dnd  config.yaml  credentials.template.yaml  parent-pipeline.yaml  pipeline.yaml
conf/: .gitignore  adu-conf.txt.template  config.toml.est.dps-payload.template  config.toml.est.dsp-payload.template  config.toml.est.payload.template  config.toml.est.template  config.toml.gateway.est.template  config.toml.gateway.template  config.toml.gateway.tpm.template  config.toml.ics-iot-leaf.template  config.toml.ics-iot.template  config.toml.ics-iotedge-demo-portal.template  config.toml.ics-iotedge-gateway.template  config.toml.ics-iotedge.template  config.toml.iot-leaf.template  config.toml.iot.template  config.toml.iotedge.template  config.toml.no-est.template  config.toml.tpm.template  du-config.json.template  enrollment_static.conf.template  enrollment_static.json.template  provisioning_static.conf.template  wpa_supplicant.conf.simple.template
debian/: control  copyright  deb_control  pkg_config
src/: auth.rs  build.rs  cli.rs  config.rs  device_update.rs  docker.rs  enrollment.rs  file.rs  identity.rs  image.rs  lib.rs  main.rs  ssh.rs  wifi.rs
src/device_update/: blob_sas.rs  client.rs  mod.rs  token.rs
src/device_update_import/: blob_uploader.rs  env_vars.md  mod.rs
src/file/: compression.rs  functions.rs  mod.rs  partition.rs
src/identity/: ecos.rs  mod.rs
src/validators/: device_update.rs  enrollment.rs  identity.rs  image.rs  mod.rs  ssh.rs
testfiles/: boot.scr  dps-payload.json  dsp-payload.json  enrollment_static_invalid_connection_string.json  enrollment_static_missing_dps.json  enrollment_static_missing_iothub.json  enrollment_static_unknown_key.json  identity_config_dps.toml  identity_config_dps_est.toml  identity_config_dps_payload.toml  identity_config_dps_sas.toml  identity_config_dps_tpm.toml  identity_config_dps_x509_est.toml  identity_config_dps_x509_no_est.toml  identity_config_gateway.toml  identity_config_hostname_empty.toml  identity_config_hostname_invalid.toml  identity_config_hostname_valid.toml  identity_config_leaf.toml  identity_config_manual.toml  identity_config_manual_connection_string.toml  identity_config_manual_sas.toml  identity_config_manual_tpm.toml  identity_config_minimal.toml  image.swu.importManifest.json.orig  image.wic.xz  intermediate.csr  intermediate.key  intermediate_cert.pem  intermediate_cert_key.pem  intermediate_full_chain_cert.pem  non_ssh_ca  root.ca.cert.pem  rootCA.crt  rootCA.key  rootCA.srl  ssh_ca_ed25519.pub  ssh_ca_rsa.pub  test-ca.key  test-ca.pem  (+3 more)
tests/: integration_tests.rs
tests/common/: mod.rs
