[package]
authors = ["omnect@conplement.de>"]
description = "This tool provides a command-line interface to configure omnect-os images and to communicate with omnect-os empowered devices."
edition = "2021"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "omnect-cli"
readme = "README.md"
repository = "https://github.com/omnect/omnect-cli"
version = "0.24.13"

[dependencies]
actix-web = "4.9"
anyhow = "1"
# switch back to https://github.com/Azure/azure-sdk-for-rust.git as soon as
# https://github.com/Azure/azure-sdk-for-rust/pull/1636
# is merged and a new new release is available
#azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
#azure_iot_deviceupdate = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
#azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
#azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
#azure_storage_blobs = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
azure_core = { git = "https://github.com/omnect/azure-sdk-for-rust.git" }
azure_iot_deviceupdate = { git = "https://github.com/omnect/azure-sdk-for-rust.git" }
azure_identity = { git = "https://github.com/omnect/azure-sdk-for-rust.git" }
azure_storage = { git = "https://github.com/omnect/azure-sdk-for-rust.git" }
azure_storage_blobs = { git = "https://github.com/omnect/azure-sdk-for-rust.git" }

base64 = "0.22"
bzip2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
env_logger = "0.11"
filemagic = "0.13"
flate2 = "1.1"
omnect-crypto = { git = "https://github.com/omnect/omnect-crypto.git", tag = "0.4.0" }
keyring = "3.6"
libfs = "0.8"
log = "0.4"
num_cpus = "1.16"
oauth2 = "4.4"
open = "5.3"
regex = "1.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
sha2 = "0.10"
stdext = "0.3"
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.10.1"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", features = [
    "macros",
    "io-std",
    "io-util",
    "fs",
    "net",
    "rt-multi-thread",
] }
toml = "0.8"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
url = { version = "2.4" }
validator = { version = "0.18.1", features = ["derive"] }
xz2 = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
assert-json-diff = "2.0"
data-encoding = "2.5"
file_diff = "1.0"
httpmock = "0.7"
ring = "0.17"
tar = "0.4.41"

# metadata for building with cargo-deb (https://crates.io/crates/cargo-deb)
[package.metadata.deb]
depends = "bmap-tools, e2tools, fdisk, keychain, libc6 (>= 2.34), libmagic1, libssl3 (>= 3.0.0), mtools"
revision = ""
