[package]
authors = ["omnect@conplement.de>"]
description = "This tool provides a command-line interface to configure omnect-os images and to communicate with omnect-os empowered devices."
edition = "2024"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "omnect-cli"
readme = "README.md"
repository = "https://github.com/omnect/omnect-cli"
version = "0.26.2"

[dependencies]
actix-web = "4.11"
anyhow = "1"
# switch back to https://github.com/Azure/azure-sdk-for-rust.git as soon as
# https://github.com/Azure/azure-sdk-for-rust/pull/1636
# is merged and a new new release is available
#azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
#azure_iot_deviceupdate = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
#azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
#azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
#azure_storage_blobs = { git = "https://github.com/Azure/azure-sdk-for-rust.git", tag = "v2024-??-??" }
azure_core = { git = "https://github.com/omnect/azure-sdk-for-rust.git", default-features = false }
azure_iot_deviceupdate = { git = "https://github.com/omnect/azure-sdk-for-rust.git", default-features = false }
azure_identity = { git = "https://github.com/omnect/azure-sdk-for-rust.git", default-features = false }
azure_storage = { git = "https://github.com/omnect/azure-sdk-for-rust.git", default-features = false }
azure_storage_blobs = { git = "https://github.com/omnect/azure-sdk-for-rust.git", default-features = false }
base64 = { version = "0.22", default-features = false }
bzip2 = { version = "0.5", default-features = false, features = [
    "libbz2-rs-sys",
] }
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "std",
] }
directories = { version = "6.0", default-features = false }
env_logger = { version = "0.11", default-features = false }
filemagic = { version = "0.13", default-features = false, features = [
    "pkg-config",
] }
flate2 = { version = "1.1", default-features = false }
omnect-crypto = { git = "https://github.com/omnect/omnect-crypto.git", tag = "0.4.0" }
keyring = { version = "3.6", default-features = false }
libfs = { version = "0.8", default-features = false }
log = { version = "0.4", default-features = false }
num_cpus = { version = "1.17", default-features = false }
oauth2 = { version = "5.0", default-features = false, features = ["reqwest"] }
open = { version = "5.3", default-features = false }
regex = { version = "1.11", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_path_to_error = { version = "0.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
stdext = { version = "0.3", default-features = false }
strum = { version = "0.27", default-features = false }
strum_macros = { version = "0.27", default-features = false }
tempfile = { version = "3.20", default-features = false }
time = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "fs",
    "rt-multi-thread",
] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
uuid = { version = "1.17", default-features = false, features = ["v4"] }
url = { version = "2.5", default-features = false }
validator = { version = "0.20", default-features = false, features = [
    "derive",
] }
xz2 = { version = "0.1", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
assert-json-diff = "2.0"
data-encoding = "2.9"
file_diff = "1.0"
httpmock = "0.7"
ring = "0.17"
tar = "0.4"

# metadata for building with cargo-deb (https://crates.io/crates/cargo-deb)
[package.metadata.deb]
depends = "bmap-tools, e2tools, fdisk, keychain, libc6 (>= 2.34), libmagic1, libssl3 (>= 3.0.0), mtools"
revision = ""
